// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time Axis Examples when zooming for should render as expected as zoom [0, 1] 1`] = `
{
  "height": 20.333333333333258,
  "width": 721,
  "x": 59,
  "y": 499,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.2, 0.5] 1`] = `
{
  "height": 20.333333333333258,
  "width": 721,
  "x": 59,
  "y": 499,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.3, 0.35] 1`] = `
{
  "height": 23,
  "width": 721,
  "x": 59,
  "y": 497,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.4, 0.4125] 1`] = `
{
  "height": 20.333333333333258,
  "width": 721,
  "x": 59,
  "y": 499,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.25, 0.35] 1`] = `
{
  "height": 23,
  "width": 721,
  "x": 59,
  "y": 497,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.35, 0.375] 1`] = `
{
  "height": 23,
  "width": 721,
  "x": 59,
  "y": 497,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.45, 0.45625] 1`] = `
{
  "height": 23,
  "width": 734.3333333333333,
  "x": 45.666666666666686,
  "y": 497,
}
`;
